# the-cave

./: .gitignore  BALANCE_AUDIT.md  CLAUDE.md  Cargo.toml  Dockerfile  MIGRATION.md  PLAN.md  PLAN_QUICKBAR.md  README.md  SPRITE_ATLAS.md
.github/workflows/: deploy.yml
assets/: index.html
docs/: biome-design.md
sprites/: create_spritesheets.py
sprites/output/: 32rogues-animals-atlas.txt  32rogues-animated-tiles-atlas.txt  32rogues-autotiles-atlas.txt  32rogues-items-atlas.txt  32rogues-monsters-atlas.txt  32rogues-rogues-atlas.txt  32rogues-tiles-atlas.txt  pixel-art-rpg-atlas.txt  raven-fantasy-16x16-atlas.txt  raven-fantasy-32x32-atlas.txt  raven-fantasy-64x64-atlas.txt
src/: camera.rs  config.rs  errors.rs  game.rs  hit_test.rs  input.rs  lib.rs  main.rs  map.rs  renderer.rs  sprites.rs  world.rs
src/assets/: biomes.rs  colors.rs  enemies.rs  game_page_script.rs  game_page_style.rs  items.rs  mod.rs  tiles.rs
src/camera/: mod.rs  tests.rs
src/components/: mod.rs
src/config/: combat.rs  enemies.rs  items.rs  mapgen.rs  mod.rs  progression.rs  spawn_tables.rs  tests.rs
src/game/: action.rs  biome.rs  combat.rs  enemy.rs  item.rs  items.rs  legendary.rs  mod.rs  movement.rs  player.rs  progression.rs  spawning.rs  survival.rs  types.rs
src/html/: mod.rs
src/map/: fov.rs  generation.rs  mod.rs  tests.rs
src/pages/: game.rs  map.rs
src/renderer/: drawers.rs  hud.rs  menus.rs  mod.rs  world.rs
src/server/: mod.rs  session.rs
src/sprite_atlas/: animals.rs  animated_tiles.rs  items.rs  mod.rs  monsters.rs  (+2 more)
web/: index.html  manifest.json  sw.js
(+35 files in other folders)
