[package]
name = "the-cave"
version = "0.2.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlElement",
    "HtmlDivElement",
    "CanvasRenderingContext2d",
    "EventTarget",
    "Event",
    "TouchEvent",
    "TouchList",
    "Touch",
    "KeyboardEvent",
    "Storage",
    "TextMetrics",
    "console",
]
